syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.rpc.grpc.proto";
option java_outer_classname = "UserRegister";

package com.example.rpc.grpc;

service UserCenterService {
    rpc userCenter (InvokeRequest) returns (InvokeResponse) {
    }
}

message InvokeRequest {
     string id = 1;
     string userName = 2;
     int32 sex = 3;
     int32 age =4;
     string telephone = 5;
     string address = 6;

}

message InvokeResponse {
    string msg = 1;
}
